# bb_state

./: .gitignore  CMakeLists.txt  package.xml
include/EposManager/: EPOS.h  EPOSControl.h
include/bb_state/: IONode.h
include/bbcontrol/EposManagerMsg/: GroupEPOSControl.h  GroupMotorInfo.h  MotorInfo.h
launch/: state_machine.launch  state_machine_test.launch  state_machine_test_with_epos.launch
msg/: Rake.msg  State.msg  TwistWithID.msg
src/: Controller.cpp  IONode.cpp  IONode.h  IONode_spray.cpp  Initialization.cpp  JoystickoneStickversion.cpp  StateMachine.cpp  TestTwistpublisher.cpp  initialize.cpp  io_node.cpp  io_node.cpp.backup  node_wolf.cpp  nodeforcircle.cpp  state_machine.cpp
